Fix: prevent page content to be hidden by nav bar on chrome

--- a/client/src/pages/add/AddPage.scss
+++ b/client/src/pages/add/AddPage.scss
@@ -5,8 +5,8 @@
   align-items: center;
   flex-direction: column;
   width: 100%;
-  margin-bottom: $navigation-bar-size;
   padding: $page-content-spacing;
+  padding-bottom: $navigation-bar-size + $page-content-spacing;
 
   &__body {
     max-width: $max-content-width * 3/4;
