--- a/client/src/pages/stats/StatsPage.scss
+++ b/client/src/pages/stats/StatsPage.scss
@@ -6,8 +6,8 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
-  margin-bottom: $navigation-bar-size;
   padding: $page-content-spacing;
+  padding-bottom: $navigation-bar-size + $page-content-spacing;
 
   &__top-controls {
     display: flex;
